# Imperator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  idea-next.md  idea.md  install.ps1  install.sh
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
benchmarks/: README.md  budgets.yaml  methodology.md  requirements.txt  results.md
cli/: pyproject.toml
cli/imperator/: __init__.py  catalog.py  compiler.py  config.py  engine.py  installer.py  loader.py  main.py  parser.py  validator.py
cli/imperator/commands/: add.py  clean.py  compile.py  doctor.py  export.py  init.py  list.py  role.py  stats.py  validate.py
cli/imperator/renderers/: __init__.py  base.py  claude.py  codex.py  commands.py  cursor.py  gemini.py  skills.py
cli/imperator/templates/: claude-agent.j2  claude-code.j2  claude-global.j2  claude-md.j2  claude-rule.j2  codex-agent.j2  codex-agents-md.j2  codex.j2  cursor-role.mdc.j2  cursor-rule.mdc.j2  cursor.j2  gemini-command.toml.j2  gemini-md.j2  gemini.j2
cli/tests/: test_commands.py  test_doctor.py  test_engine.py  test_installer.py  test_skills.py  test_validator.py
compiler/: compile.py
core/: behavior.md  investigation.md  output.md  processing.md  safety.md
docs/: agent-support.md  alternatives.md  contributing.md  domain-authoring.md  getting-started.md  install-security.md  release.md  role-authoring.md  rule-authoring.md  rules-spec.md  security.md
extensions/: api-rest.md  docker.md  fastapi.md  nextjs.md  postgres.md  python.md  react.md  typescript.md
profiles/: fullstack-js.md  minimal.md  python-api.md
(+88 files in other folders)
